--- a/BookReading/读《程序是如何跑起来的》.md
+++ b/BookReading/读《程序是如何跑起来的》.md
@@ -2,9 +2,119 @@
 
 ## 前言
 
-操作系统将底层的很多抽象的原理封装成面向对象的、方便大众理解和操作的图形界面、这大大提高了计算机操作的便利性，然而，享受方便的同事也付出了代价，对于底层的了解越来越少，只会使用工具，却无法明白工具的底层机制就无法创造出更好的工具。
+> 操作系统将底层的很多抽象的原理封装成面向对象的、方便大众理解和操作的图形界面、这大大提高了计算机操作的便利性，然而，享受方便的同事也付出了代价，对于底层的了解越来越少，只会使用工具，却无法明白工具的底层机制就无法创造出更好的工具。
 
-![](http://oc98nass3.bkt.clouddn.com/15223940269141.jpg)
+![](http://oc98nass3.bkt.clouddn.com/15224759438544.jpg)
 
+## 第一章
+
+### 热身问题
+
+**问：**
+1. 程序是什么?
+2. 程序是由什么组成的?
+3. 什么是机器语言?
+4. 正在运行的程序存储在什么位置?
+5. 什么是内存地址?
+6. 计算机的构成元件中，负责程序的解释和运行的是哪个?
+
+**答：**
+1. 指示计算机每一步动作的一组指令
+2. 指令和数据
+3. CPU 可以直接识别并使用的语言
+4. 内存
+5. 内存中，用来表示命令和数据存储位置的数值
+6. CPU
+
+### 解析
+
+1.一般所说的程序,譬如运动会、音乐会的程序等,指的是“**行
+事的先后次序**”。计算机程序也是一样的道理。
+2.**程序是指令和数据的组合体**。例如，C 语言“printf(" 你好");”
+这个简单的程序中，printf是指令，" 你好" 是数据。
+3.CPU 能够直接识别和执行的只有机器语言。使用C、Java 等语
+言编写的程序,最后都会转化成机器语言。
+4.硬盘和磁盘等媒介上保存的程序被复制到内存后才能运行。
+5.内存中保存命令和数据的场所，通过地址来标记和指定。地址
+由整数值表示。
+6.计算机的构成元件中，根据程序的指令来进行数据运算，并控
+制整个计算机的设备称作CPU。大家熟知的奔腾( Pentium )就
+是CPU 的一种。
+
+### 1.1 CPU内部结构
+
+集成电路 = CPU + 内存
+
+- CPU
+   * 寄存器： 暂存指令、数据, 一般一个CPU包含20~100个寄存器.
+   * 控制器：负责把内存上指令、数据的读入寄存器. 
+   * 运算器: 负责运算，从内存读入寄存器的数据。
+   * 时钟：发出CPU开始计时的时钟信号。
+
+   ![](http://oc98nass3.bkt.clouddn.com/15224054624584.jpg)
+
+程序启动后，根据时钟信号，控制器会从内存中读取指令和数据。通过对这些指令加以解释和运行，运算器就会对数据进行运算。控制器根据该运算结果来控制(主要是数据输人输出的时机控制)计算机。
+
+### 小总结
+
+程序编写好后，被计算机复制到内存中，然后CPU的控制器从内存中读取指令和数据，运算器对数据进行运算，最后控制器根据运算器的结果来控制计算器。因为现在计算机CPU的计算能力很强，所以这个过程很快。
+
+#### 寄存器
+
+寄存器的主要种类和功能
+
+![](http://oc98nass3.bkt.clouddn.com/15224080423914.jpg)
+
+表1-1 寄存器的主要种类和功能
+
+| 种类  | 功能 |
+| --- | --- | 
+| 程序计数器( program counter ) |  存储下一条指令**所在内存的地址** |
+| 标志寄存器( flag register ) |   存储运算处理后的CPU 的状态 | 
+
+### 汇编语言
+
+汇编：将汇编语言编写的程序转化成机器语言的过程称为汇编。
+反汇编：将机器语言转化成汇编语言程序的过程称为反汇编。
+
+汇编语言：汇编语言采用助记符(memonic )来编写程序,每一个原本是电气信号的机器语言“指令都会有一个与其相应的助记符，汇编语言和机器语言基本上是一一对应的。
+
+### 条件分支和循环机制
+
+程序的流程
+    * 顺序执行： 按照地址内容的顺序执行指令
+    * 条件分支： 根据条件执行任意地址的指令
+    * 循环：        重复执行同一地址的指令
+
+### 函数的调用机制
+
+![](http://oc98nass3.bkt.clouddn.com/15224745656067.jpg)
+
+函数实现了代码指令在内存的离散分布。
+
+* Call指令：     调用函数后需要执行的质量地址存在栈中
+* Return指令： 将保存在栈中的地址设定到程序计数器中，函数处理完后，下一个指令就会被读取出来，再被设定到程序计数器中。
+
+* 栈(stack) 本来是“干草等堆积如山”的意思。在程序领域中，通常使用
+该词来表示不断地存储各种数据的内存区域。函数调用后之所以能正确
+地返回调用前的地址，就是栈的功劳。
+* 数组: 是指同样长度的数据, 在内存中进行连续排列的数据构造。一个数组名来表示全体数据，通过索引来区分数组的各个数据(元素)。
+* 位：1位代表二进制数的一个字节位。
+
+##### 综合使用地址和索引来决定实际地址
+
+![](http://oc98nass3.bkt.clouddn.com/15224757633327.jpg)
+
+### 机器语言
+
+![](http://oc98nass3.bkt.clouddn.com/15224760366460.jpg)
+
+原来CPU可以进行的处理非常少。虽然高级编程语言编写的程序看起来非常复杂,但CPU实际处理的事情就是这么简单。
+
+#### 一点感想
+
+机器语言指令必须要有读写和传送的操作，还有逻辑运算，而跳转和Call、Return指令是高级一点的指令。
+
+感觉CPU其实主要发挥它的性能优势，计算速度快，但是专注于快速处理数据运算，CPU无法处理复杂的高级逻辑，所以才出现了各种方便程序员理解的高级编程语言。反应到生活中，人也要尽量发挥个人的长处，才能创造更大的价值吧，
 
 
