整理网络多线程

--- a/iOSCocoa/多线程解析.md
+++ b/iOSCocoa/多线程解析.md
@@ -1,12 +1,47 @@
 # 多线程
 
-## 主线程
+## 线程
+
+* iOS开发人员必须为他想要执行的工作/流程编写代码，以便创建和管理线程本身。
+* iOS开发人员必须小心使用线程的行动计划。
+* iOS开发人员必须自己管理可靠的问题，如线程的可重用性，锁定等。
+* 线程也会消耗更多内存。
+* 线程池是执行某种处理的线程池。线程池通常会附加一些线程安全队列（引用消息队列），以允许您排队要完成的作业。这里队列通常被称为“任务队列”。
+* 因此，在某种程度上，线程池可能存在于生产者端（生成数据）或消费者端（处理数据）。而“传递”数据的方式是通过队列。为什么需要队列这个“中间人”
+ - 它解耦系统。生产者不了解消费者
+ - 如果生产者数据出现峰值，消费者不会被数据轰炸。队列长度会增加，但消费者是安全的。
+
+### 主线程
 
 * 所有的UI交互都发生在主线程，所以为了用户体验，不想让任何耗时操作发生在主线程。
 * 使用主线程进行所有的UI同步。优先响应用户的操作（点击，手势等）
 * 其他所有的操作，可以放在子线程中执行 
+* **整个程序是由全局队列来管理，然后UI的刷新是由主队列管理**，我们可以将我们的任务放到我们创建的队列中去，也可以放在主队列中，也可以放在全局队列中。
 
-### 获取主队列
+## 队列
+
+* 调度队列是在应用程序中异步和并发执行任务的简便方法。一个任务很简单，就是你的应用程序需要执行一些工作。例如，您可以定义任务以执行某些计算，创建或修改数据结构，处理从文件读取的一些数据或任何数量的事物。您可以通过将相应的代码放在函数或块对象中并将其添加到调度队列来定义任务。
+
+* **调度队列是一种类似于对象的结构，用于管理您提交给它的任务。所有调度队列都是先进先出的数据结构。因此，添加到队列的任务始终按照添加的顺序启动**。GCD会自动为您提供一些调度队列，但您可以为特定目的创建其他调度队列。表3-1列出了应用程序可用的调度队列类型以及如何使用它们。
+
+* 消息队列是一种数据结构，用于将消息从发送时起保存到接收方检索并对其进行操作的时间。通常，队列用作“连接”生成器（数据）的方式
+
+[Dispatch Queues](https://developer.apple.com/library/archive/documentation/General/Conceptual/ConcurrencyProgrammingGuide/OperationQueues/OperationQueues.html)
+
+[objective c - What is the difference between 'thread' and 'queue' in iOS development? - Stack Overflow](https://stackoverflow.com/questions/23166246/what-is-the-difference-between-thread-and-queue-in-ios-development)
+
+### NSOperationQueue：
+
+* NSOperation类是一个抽象类，它封装了与单个任务相关的代码和数据。
+* 开发人员需要使用子类或NSOperation的系统定义子类之一来执行任务。
+* 将操作添加到NSOperationQueue中以执行它们。
+* NSOperationQueue为每个操作创建一个新线程，并按添加顺序运行它们。
+* 操作队列处理所有线程管理，确保尽可能快速有效地执行操作。
+* 操作队列直接通过在辅助线程上运行它们或间接使用GCD（Grand Central Dispatch）来执行操作。
+* 它负责所有内存管理并大大简化了流程。
+* 如果您不想使用操作队列，还可以通过调用其start方法来执行操作。它可能会使您的代码过于复杂。
+
+### 主队列
 
 ```objc
 dispatch_queue_t mainQ = dispatch_get_main_queue();
@@ -18,7 +53,6 @@ dispatch_queue_t mainQ = dispatch_get_main_queue();
 dispatch_async (dispatch_get_main_queue(), ^{ /* call aMethod */ });
 ```
 
-
 ###  创建一个队列
 
 ```objc
@@ -26,14 +60,18 @@ dispatch_queue_t otherQ = dispatch_queue_create("name", NULL);
 //第二个参数： In OS X v10.7 and later or iOS 4.3 and later, specify DISPATCH_QUEUE_SERIAL (or NULL) to create a serial queue or specify DISPATCH_QUEUE_CONCURRENT to create a concurrent queue. In earlier versions, you must specify NULL for this parameter.
 ```
 
-
-
 * 常见多线程在项目中的应用？
 * 多线程的死锁
 * 控制并发线程的数量： 多线程的信号量`dispatch_semaphore`
 * 线程的异步
 * 任务进行分块： `dispatch_group_notify`.
 * iOS使用dispatch_group实现分组并发网络请求
+
+## 线程和队列
+
+* 线程是一个消费者，线程的执行就是消费的一次过程
+* 队列是一个生产者，所有任务都会在队列这个生产者的容器中存在
+* 队列决定了任务在哪一条线程中执行
 
 ## 线程死锁
 
