--- a/代码回顾-性能优化/代码规范.md
+++ b/代码回顾-性能优化/代码规范.md
@@ -1,15 +1,7 @@
-
-# CodeRule
-
+# CodeRule代码规范
 
 [iOS 代码规范 - 简书](http://www.jianshu.com/p/2093cdaa2f96)
-
-
-iOS 代码规范
-144  作者 J_Knight 已关注
-2017.06.14 13:22* 字数 8816 阅读 400评论 12喜欢 26
  
-配图来自：nipic.com
 利用上周的业余时间把这篇规范整理了出来，我会将这篇规范作为我们iOS团队的代码规范，并且还会根据读者的反馈，项目的实践和研究的深入做不定时更新，还希望各位朋友看了多多指正和批评。
 
 这篇规范一共分为三个部分：
