记录项目问题和项目资源

--- a/项目相关/项目备用库.md
+++ b/项目相关/项目备用库.md
@@ -4,3 +4,80 @@
 ## 导航
 
 * [listenzz/HBDNavigationBar: A custom UINavigationBar for smooth switching between various states, including bar style, bar tint color, background image, background alpha, bar hidden, title text attributes, tint color, shadow hidden...](https://github.com/listenzz/HBDNavigationBar)
+
+## 瀑布流：
+                1. https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout
+                2. https://www.jianshu.com/p/2876bfe92df4
+ 
+中间按钮的切换： http://www.cocoachina.com/ios/20171218/21572.html，https://github.com/Ccalary/MCTabBarDemo
+
+
+## 动画
+
+1. https://github.com/YouXianMing/Animations/tree/master
+2. https://github.com/jhurray/JHChainableAnimations
+3. https://github.com/facebook/pop
+4. https://github.com/mdznr/Spring-Animation
+5. https://github.com/app-developers/top
+
+## 图表
+
+1. https://github.com/AAChartKit/AAChartKit/blob/master/CHINESE-README.md
+2. [iOS圆弧渐变进度条的实现 - 简书](https://www.jianshu.com/p/edbc647ff178)
+
+## UIScrollView冲突问题
+
+1. https://github.com/SPStore/HVScrollView
+2. https://www.jianshu.com/p/8b87837d9e3a
+3.  https://github.com/ArchLL/PersonalCenter-Extend
+4. https://github.com/Roylee-ML/SwipeTableView/blob/master/README.md#%E7%A4%BA%E4%BE%8B%E4%BB%A3%E7%A0%81
+5. https://github.com/SPStore/HVScrollView
+
+
+## 评论个相册参考高仿微信demo
+
+https://github.com/gsdios/GSD_WeiXin/blob/master/README.md
+
+
+## web抓取cookie 
+https://segmentfault.com/q/1010000000151528
+
+### WebJS  https://blog.devzeng.com/blog/ios-uiwebview-interaction-with-javascript.html
+
+### WKWebView- iOS开发 
+1. WKWebView使用 - 简书 https://www.jianshu.com/p/5b29df96bc9f
+2. 教你使用 WKWebView 的正确姿势 - iOS - 掘金 https://juejin.im/entry/5975916e518825594d23d777
+
+
+## 以后备用
+
+### 搜索
+
+1. PYSearch https://github.com/3lvis/Form
+
+### 评论
+
+1. ATDemo: iOS中@功能的实现 https://github.com/lisongrc/ATDemo
+2. 富文本 hon-key/NudeIn: A easy-to-use attributed text component，use like masonry  https://github.com/hon-key/NudeIn
+
+
+##  导航栏交互
+
+
+1. WRNavigationBar   https://github.com/wangrui460/WRNavigationBar
+
+
+### URL路由跳转
+
+1. imlifengfeng/FFRouter: Powerful and easy-to-use URL routing library in iOS that supports URL Rewrite.https://github.com/imlifengfeng/FFRouter
+
+## Debug
+
+
+1. [SatanWoo/JSDebugger](https://github.com/SatanWoo/JSDebugger)JavaScript-Based Debugger For Inspecting Running State Of Your Application
+
+##  Jenkins 
+
+https://blog.csdn.net/zhhelnice/article/details/82387716#code-signing-os-x-keychain-options
+
+
