update  Git版本工具的使用.md  项目App问题记录.md

--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -2,7 +2,8 @@
 
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
-* [ ] 明星主页隐藏方式
+* [ ] 明星主页优化，改成ViewModel
+* [ ] 发现行程文案没有同步bug
 
 ## 需求
 
