--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -2,8 +2,8 @@
 
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
-* [ ] 明星主页优化，改成ViewModel
-* [ ] 发现行程文案没有同步bug
+* [ ]  UIinputwindowcontroller
+![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
 
 ## 需求
 
@@ -77,6 +77,8 @@
 ![](https://i.loli.net/2018/11/06/5be1aeab33a56.jpg)
 * [x] 审核版本关闭提示
 
+* [x] 明星主页优化，改成ViewModel
+* [x] 发现行程文案没有同步bug
 
 
 ## 备注
