--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -1,9 +1,43 @@
 ## 问题列表记录
 
+* [ ] 明星主页的高度计算问题，加了排行榜入口后contentSize高度不对
+* [ ] 添加-没有期数的默认页
+* [ ] 卡片头部是Web拉起App的时候展示pick过
+* [ ] 优化-小数点浮动数字
+ 
+* [ ] 首页的点击无法刷新问题
+* [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
-* [ ]  UIinputwindowcontroller
+
+* [ ]  UIinputwindowcontroller研究
 ![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
+
+
+### 主分支-需要的改动
+
+* [ ]  饭票的小数位-整理可能发生的饭票小数点，所有位置，整理类型并测试
+
+```objc
+1. StarCertProductModel.m
+
+- (BOOL)modelCustomTransformFromDictionary:(NSDictionary *)dic {
+
+    CGFloat userToTicket_f = [dic yh_floatForKey:@"userToTicket"];
+    self.userToTicket = [[CalculateTool sharedInstance] getNumber2DecimalStr:userToTicket_f];
+
+2 .TaskUserFollowModel.m
+
+- (BOOL)modelCustomTransformFromDictionary:(NSDictionary *)dic {
+    CGFloat ticketForStar_f = [dic[@"ticketForStar"] floatValue];
+    
+    self.userTicketDesc = [[CalculateTool sharedInstance] getTicketAttrbuteStr:self.userTicket decimalFont:TaskFloatHeaderView_numberMinFont];
+    self.ticketForStar = [NSString cutBy2DecimalFloatNumber:ticketForStar_f];
+    return YES;
+}
+```
+
+* [ ] 任务完成回调
 
 ## 需求
 
