--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -1,15 +1,17 @@
 ## 问题列表记录
 
-* [ ] 明星主页的高度计算问题，加了排行榜入口后contentSize高度不对
-* [ ] 添加-没有期数的默认页
+### 排行榜问题优化
+
 * [ ] 卡片头部是Web拉起App的时候展示pick过
+
+* [x] 添加-没有期数的默认页
 * [ ] 优化-小数点浮动数字
- 
+* [ ] cut2DecimalFloatByFloat改成reviseFloatString
+
 * [ ] 首页的点击无法刷新问题
 * [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 * [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
 * [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
-
 * [ ]  UIinputwindowcontroller研究
 ![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
 
@@ -62,8 +64,9 @@
 
 ## Finished
 
-* [x] iPhone X启动后出现UI API called on a background thread: -[UIApplication 
 
+* [x] 明星主页的高度计算问题，加了排行榜入口后contentSize高度不对
+* [x] iPhone X启动后出现UI API called on a background thread: -[UIApplication 
 * [x] 早知道悬浮，关闭后添加24小时的留存
 * [x] 首页banner标签，贴图的样式
 * [x] 爱心灰色和搞切图高度为20px
