--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -1,22 +1,18 @@
 ## 问题列表记录
 
-### 排行榜问题优化
 
-* [ ] 卡片头部是Web拉起App的时候展示pick过
 
-* [x] 添加-没有期数的默认页
+### 排行榜优化
+
+* [ ] `cut2DecimalFloatByFloat`改成`reviseFloatString`
 * [ ] 优化-小数点浮动数字
-* [ ] cut2DecimalFloatByFloat改成reviseFloatString
+* [ ] 跑马灯按照数字添加---不太现实，需要计算每个cell的内容宽度和分类饭票个数
 
-* [ ] 首页的点击无法刷新问题
-* [ ] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
-* [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
-* [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
-* [ ]  UIinputwindowcontroller研究
-![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
+### 排行榜Todo
 
-
-### 主分支-需要的改动
+* [ ] 排行榜首页的banner入口
+* [ ] 空视图的展示优化
+* [ ] 卡片头部是Web拉起App的时候展示pick过
 
 * [ ]  饭票的小数位-整理可能发生的饭票小数点，所有位置，整理类型并测试
 
@@ -39,21 +35,22 @@
 }
 ```
 
-* [ ] 任务完成回调
 
 ## 需求
 
 * [ ] 请求超时的提示
-* [ ] 未登录的情况隐藏小球
 
 ## 后续优化
 
 * [ ] 进度条添加动画
 * [ ] TabbarItem再次点击回到底部
-* [ ] 首页选择第三个tab,下拉刷新到定义一个tab,然后滚动到底3个tab,发现第三个没有执行刷新
 
-* [x] 服务端发布接口错误时候，App不断请求,  网络权限不开的时候，viewDidLayoutSubviews不断调用
-* [x] SDWebImage加载的时候添加加载动画
+* [ ] 偶尔出现：关注列表取消所有用户后，存储的关注明星未同步-还显示有明星
+* [ ] NSString分类 计算富文本的宽度貌似不对， 147 和138
+* [ ]  UIinputwindowcontroller研究
+![](https://i.loli.net/2018/11/09/5be54d87577e0.jpg)
+
+
 
 ## 需要和产品沟通
 
@@ -64,7 +61,16 @@
 
 ## Finished
 
+* [x] 首页加载很慢，点击明星主页的时候延迟很高，查找原因
 
+
+* [x] 首页选择第三个tab,下拉刷新到定义一个tab,然后滚动到底3个tab,发现第三个没有执行刷新
+* [x] 未登录的情况隐藏小球
+* [x] 任务完成回调
+* [x] 服务端发布接口错误时候，App不断请求,  网络权限不开的时候，viewDidLayoutSubviews不断调用
+* [x] SDWebImage加载的时候添加加载动画
+
+* [x] 添加-没有期数的默认页
 * [x] 明星主页的高度计算问题，加了排行榜入口后contentSize高度不对
 * [x] iPhone X启动后出现UI API called on a background thread: -[UIApplication 
 * [x] 早知道悬浮，关闭后添加24小时的留存
