--- a/项目相关/问题列表记录.md
+++ b/项目相关/问题列表记录.md
@@ -1,12 +1,17 @@
 ## 问题列表记录
 
 
+### 注销成功的退出问题-不需要再次pop
+```objc
+#import "UserSettingVC.h"
+用户设置
+                /* 注销成功，退出 */
+                [PushMangerInstance gotoLogout:^{
+                    [PushMangerInstance resetNavigationControllerWithIndex:TabBarIndex_Home];
+                    [weakSelf.navigationController popViewControllerAnimated:YES];
+                }];
 
-### 排行榜优化
-
-* [ ] `cut2DecimalFloatByFloat`改成`reviseFloatString`
-* [ ] 优化-小数点浮动数字
-* [ ] 跑马灯按照数字添加---不太现实，需要计算每个cell的内容宽度和分类饭票个数
+```
 
 ### 排行榜Todo
 
@@ -36,7 +41,18 @@
 ```
 
 
+### 排行榜优化
+
+* [ ] `cut2DecimalFloatByFloat`改成`reviseFloatString`---可以实现吗？
+* [ ] 优化-小数点浮动数字
+* [ ] 跑马灯按照数字添加---不太现实，需要计算每个cell的内容宽度和分类饭票个数
+
+
 ## 需求
+
+* [ ] 打榜demo查看
+* [ ] 评论需求和详情页
+* [ ] 排行榜C位需求
 
 * [ ] 请求超时的提示
 
