--- a/项目相关/动画.md
+++ b/项目相关/动画.md
@@ -1,7 +1,26 @@
 ## 动画
 
-### Spring
+### 自定义转场push，pop动画
 
+
+![](https://i.loli.net/2018/11/18/5bf100fe00f63.jpg)
+原理：
+* [iOS自定义转场动画实战讲解](https://bestswifter.com/custom-transition-animation/)
+* [iOS 自定义转场动画浅谈](http://www.demodashi.com/demo/11612.html)
+* [CATransition 自定义转场动画 | Civel Xu's Blog](http://civelxu.com/2016/05/06/iOS%20CATransition%20%E8%87%AA%E5%AE%9A%E4%B9%89%E8%BD%AC%E5%9C%BA%E5%8A%A8%E7%94%BB/)
+
+####  知乎上下文切换效果
+
+1. 自定义控制器的转场动画（Push、Pop） http://ios.jobbole.com/90272/
+* https://github.com/JohnsonChouxin/JC_NavTransitionAnimation
+* https://www.jianshu.com/p/59224648828b#
+* push和pop转场动画基本流程
+* https://github.com/cnthinkcode/HSPresentTransitionDemo
+* https://www.jianshu.com/p/4d2fea0f6ecc
+
+
+
+### Spring
 
 将动画运用到人机交互
 上一节讲的弹簧动画的确可以让我们的UI变得鲜活起来，但这仅仅是看在眼里的，对于用户的操作却并没有什么响应和反馈。在这节会教大家如何让视图在用户进行点击操作时以动画的形式给予响应和反馈。
