--- a/项目相关/项目备用库.md
+++ b/项目相关/项目备用库.md
@@ -1,5 +1,8 @@
 ## 项目备用库
 
+[iOS-LibraryCollections: iOS常用三方库、三方库、iOS开源项目、插件、知名技术博客、iOS三方库、常用开发工具使用介绍等等，大家可以一次性下载了！](https://gitee.com/Liu0515/iOS-LibraryCollections)
+
+
 ## UI
 
 ### 导航
@@ -19,11 +22,13 @@
 
 ### 瀑布流：
               
-1. https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout
-2. https://www.jianshu.com/p/2876bfe92df4
- 
-中间按钮的切换： http://www.cocoachina.com/ios/20171218/21572.html，https://github.com/Ccalary/MCTabBarDemo
+1. [WJWaterfallLayout](https://github.com/wangjiegit/WJWaterfallLayout/tree/master/WJWaterfallLayout)
+2. [ios - 用UICollectionView实现瀑布流详解 - 简书](https://www.jianshu.com/p/2876bfe92df4)
 
+
+## 电商模块
+
+*[MVVM KVO 购物车 ](http://code.cocoachina.com/view/128713)- 计算购物车价钱
 
 ## 键盘
 
@@ -148,7 +153,6 @@ DoraemonKit具有哪些功能
 https://blog.csdn.net/zhhelnice/article/details/82387716#code-signing-os-x-keychain-options
 
 
-
 ## 逆向
 
 [AloneMonkey/MonkeyDev: CaptainHook Tweak、Logos Tweak and Command-line Tool、Patch iOS Apps, Without Jailbreak.](https://github.com/AloneMonkey/MonkeyDev)
@@ -156,3 +160,6 @@ https://blog.csdn.net/zhhelnice/article/details/82387716#code-signing-os-x-keych
 
 CaptainHook Tweak、Logos Tweak and Command-line Tool、Patch iOS Apps, Without Jailbreak.
 支持通过CocoaPods第三方应用集成SDK以及非越狱插件，简单来说就是通过CocoaPods搭建了一个非越狱插件商店。
+
+
+
